@@ -1,5 +1,10 @@
 2003-06-06  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* src/Makefile.am, configure.in: Fix schemas install
+	so it passes make distcheck.
+	
+2003-06-06  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* src/load-graph.c, src/proctable.c: Merge a couple
 	of fixes from HEAD for a new release. Fixes 
 	bug #70101 among other things.
